# linux-utils

./: .Xresources  .bashrc  .gitconfig  .gitignore  .ideavimrc  .root_bashrc  .root_zshrc  .xinitrc  .xprofile  Cargo.toml  Scheme.md  arch-installer-bin  inst  public.key  root_bashrc  yubi-initramfs
.cargo/: config.toml
.config/alacritty/: alacritty.toml  alacritty.yml
.config/dunst/: dunstrc
.config/dwm/: config.h
.config/helix/: config.toml
.config/lapce-stable/: keymaps.toml  settings.toml
.config/nvim/: .gitignore  Cargo.toml  CheatSheet.md  Readme.md  Todo.md  init.lua  init.vim  lazy-lock.json  packer-snap.json
.config/nvim/.local/: build_debug.sh  build_lto.sh
.config/nvim/after/ftplugin/: help.lua  rust.lua
.config/nvim/lua/: auto.lua  editor_cfg.lua  key_bindings.lua  load_rust.lua  plugin_cfg.lua  plugins.lua
.config/nvim/lua/cmp-ollama/: init.lua  ollama.lua
.config/nvim/lua/config/: lazy.lua
.config/nvim/lua/plug-ext/: init.lua
.config/nvim/lua/plug-ext/snacks/: diff-picker.lua  file_git_diff_picker.lua  git_log_file_picker.lua  init.lua
.config/nvim/lua/plug-ext/snacks-ext/: git_log_file_picker.lua  init.lua  inlay_hint_picker.lua
.config/nvim/lua/plug-ext/window-picker-ext/: custom_pickers.lua  filter.lua  init.lua  merge.lua  open.lua  select.lua  swap.lua
.config/nvim/lua/pluginit/: aerial.lua  catppuccin.lua  cmp.lua  diffview.lua  gopls.lua  init.lua  lsp-shared.lua  lualine.lua  luals.lua  nvim-tree.lua  nvim-treesitter.lua  pylsp.lua  rustaceanvim.lua  telescope.lua  toggleterm.lua  zls.lua
.config/nvim/lua/plugins/: aerial.lua  barbar.lua  blink.lua  catppuccin.lua  catpuccin.lua  ccls.lua  cmp.lua  comments.lua  conform.lua  crates.lua  diffview.lua  dressing.lua  edgy.lua  flash.lua  fugitive.lua  gitsigns.lua  ident-blankline.lua  lsp-status.lua  lualine.lua  neo-tree.lua  neocase.lua  neogit.lua  nvim-autopairs.lua  nvim-lspconfig.lua  nvim-scrollbar.lua  nvim-tree.lua  nvim-window-picker.lua  nvim-winpick.lua  persistence.lua  rustaceanvim.lua  snacks.lua  spec.lua  spectre.lua  surround.lua  telescope.lua  toggleterm.lua  treesitter-context.lua  treesitter.lua  trouble.lua
.config/nvim/lua/util/: buffer.lua  debug.lua  file.lua  git.lua  init.lua  keymap.lua  lsp_attach.lua  string_manipulation.lua  telescope_diff_picker.lua  telescope_inlay_hint_picker.lua
.config/nvim/rust/main-config/: Cargo.toml
.config/nvim/rust/main-config/src/: command.rs  error.rs  git.rs  lib.rs  observability.rs
.config/nvim/spell/: en.utf-8.add  harper
.gnupg/: gpg-agent.conf  sshcontrol
arch-installer/: Cargo.toml
arch-installer/src/: device.rs  disks.rs  error.rs  main.rs
arch-installer/src/arch/: mod.rs
arch-installer/src/output/: mod.rs
arch-installer/src/parse/: manipulate.rs  mod.rs
arch-installer/src/process/: mod.rs
arch-mirror-rank/: Cargo.toml
arch-mirror-rank/src/: main.rs
bash/: ensure-env.sh  new-boot-src.sh  play_notification_sound.sh
gentoo/: .zshrc  CompileKernel.md  base-pkgs  postinstall.sh  struggles.md
gentoo-doc/: package-list
jetbrains/: Grappucino.icls
linux-compat/: Cargo.toml
package/tiny-helper/: Binaries.md  Cargo.toml  run-helper.sh
package/tiny-helper/src/: cli.rs  diff.rs  main.rs
rust/: imports.toml
scripts/: cargo-installed.sh  rebuild_move.sh
sys-installer/: Cargo.toml  cfg.toml
sys-installer/src/: main.rs  opt.rs
sys-installer/src/cfg/: mod.rs
sys-installer/src/error/: mod.rs
sys-installer/src/install/: chroot_gentoo_finalize.rs  chroot_gentoo_prep.rs  enter.rs  mod.rs  prep_gentoo.rs  root_configure_system.rs  user_configure_system.rs
sys-installer/src/native_interactions/: cmd.rs  device.rs  emerge.rs  mod.rs  progress.rs  sys_info.rs
sys-installer/src/util/: file_system.rs
(+17 files in other folders)
