[package]
name = "arch-installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.25.0", features = ["mount"] }
rpassword = "7.0.0"
structopt = { version = "0.3.26" }
thiserror = "1.0.32"
