[package]
name = "arch-mirror-rank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
futures = "0.3.23"
hyper = { version = "0.14.20", default-features = false, features = ["client", "http1", "http2", "tcp"] }
hyper-rustls = { version = "0.23.0", default-features = false, features = ["http2", "http1", "tls12", "native-tokio"] }
num_cpus = "1.13.1"
thiserror = "1.0.32"
tokio = { version = "1.20.1", default-features = false, features = ["rt-multi-thread", "macros", "time"] }
