[package]
name = "sys-installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.17" }
indicatif = "0.17.0-beta.1"
libc = "0.2.112"
serde = { version = "1.0.131", features = ["derive"] }
structopt = "0.3.25"
tokio = { version = "1.14.0", features = ["rt-multi-thread", "macros", "process", "fs", "io-util"]}
thiserror = "1.0.30"
toml = "0.5.8"
