[workspace]
members = ["rust/main-config"]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.96"}
nvim-oxi = { version = "0.5.1", features = ["neovim-0-10"] }
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[workspace.lints.clippy]
pedantic = {priority = -1, level = "warn"}
module_name_repetitions = "allow"
missing_errors_doc = "allow"
similar_names = "allow"
